# distanceexperiments

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  bmfp16.cpp  build.sh  confirm.py  dp.h  driver.cpp  list_avx_features.sh  searches.cpp  testBF16.cpp  testFP16.cpp  testFP16_autovec.cpp  testFP16_scalar.cpp  testfp16_2.cpp  tfp16.cpp
